2011-10-11 Roman
- DAQ.JavaLikeCalc: Set types for all registers on calc and Registers content prepare is pass.


2011-10-10 Roman
- Archive: Trends build hang for maximum border leser minimum. Tip helps added for trends build dialog.
- FIX:DAQ.JavaLikeCalc: EVAL_BOOL return fix to TVariant by convert to char.
    Set value from NULL TVariant to RegW is fixed. Registers context init on call is change to use switch.
    Set Object in function RegW::setType() is fixed by create empty object.
    Constant's strings concatenate is fixed for multiply constants.


2011-10-09 Roman
- UI.Vision, UI.WebVision: Value, not use percent, scale store for multiply parameters into primitive "Diagram"
    for the parameters like scale, over 20%, is added.
- FIX:DB.PostgreSQL: TIMESTAMP place for DateTimeDec integer type is fixed.


2011-10-07 Roman
- UI.VCAEngine: Document generation repeat limit for primitive "Document" is set to time limit 5s.


2011-10-06 Roman
- DAQ: Force loading for all fields of controller's and parameter's object is added.
- DAQ.ModBus: Force protocol set on creation to "TCP", for some specific fields visible update.
- DAQ.Siemens, DAQ.DiamondBoards: Full controller's and parameter's object load mechanism update.


2011-10-05 Roman
- SYS: Debian init script is updated by "almaz".


2011-10-04 Roman
- !!:FIX:DAQ.Siemens: Float and Double values get and set is fixed. Reconnect set is fixed on error connection.
    Integer's, Real's and String's size property using is fixed. Links clear on parameter disable is made.
- FIX:DAQ.ModBus: Links clear on parameter disable is made. Links to special attributes clear on disable is fixed.
- FIX:UI.Vision: Edition status is fixed for LineEdit on no confirmed mode.


2011-09-23 Roman
- FIX:DAQ.ModBus: Write EVAL to writible attribute on time error writing to remote device.
- FIX:DAQ: Get value by time from all archives by function get{S|R|B|I}() is fixed for archives process not only buffer.


2011-09-20 Roman