@@ -1,3 +1,9 @@
+2011-10-14 Roman
+- DAQ.Template, DAQ.JavaLikeCalc, UI.VCAEngine, : DB address is addapted to "<cfg>.[tbl]" parse.
+- !!:DB: Time limit at 5s and offset set is added to big table content display.
+- FIX:UI.Vision: Edit area resize and top hold is fixed on geometry change for edited widget.
+
+
 2011-10-11 Roman
 - DAQ.JavaLikeCalc: Set types for all registers on calc and Registers content prepare is pass.
 
